@@ -1,3 +1,9 @@
+2006-09-22  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell-callbacks.c
+	(gimp_display_shell_space_released): also look at
+	shell->space_release_pending when deciding whether to return early.
+
 2006-09-22  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/pygimp/plug-ins/colorxhtml.py: create output that at
